--- a/public/admins/product/add/add.css
+++ b/public/admins/product/add/add.css
@@ -1,3 +1,12 @@
 .select2-selection__choice__display{
     background-color: rgb(20, 56, 44) !important;
 }
+.image_detail_product, .feature_image {
+    width: 100%;
+    height: 130px;
+    object-fit: cover;
+}
+.container_image_detail, .feature_image_container {
+    margin-top: 20px;
+}
+
